2012-06-19  Bartosz Brachaczek <b.brachaczek@gmail.com>

	* Made plugin compatible with Kadu 0.12.0.
	* Fixed build on MSVC.
	* Minor cleanup.

2012-02-15  Patryk Cisek <patryk@debian.org>

	* Adjusted source to fit 0.12.0-... API

2011-12-29  Bartosz Brachaczek <b.brachaczek@gmail.com>

	* Plugin made compatible with Kadu 0.11.
	* Some minor cleanup.

2011-10-25  Patryk Cisek <patryk@debian.org>

	* Fixed compilation problem with new dpkg on Debian and Ubuntu

2011-08-24  Piotr Galiszewski <whe@kadu.im>

	* Dostosowano do API Kadu 0.10

2011-01-03  Patryk Cisek <patryk@debian.org>

	* Dostosowano no najnowszych (po 0.6.6-beta13) zmian w API

2010-12-19  Patryk Cisek <patryk@debian.org>

	* Drobna poprawka: przycisk "TeX" w oknie czatu nie jest już
	  "checkable"

2010-11-25  Patryk Cisek  <patryk@debian.org>
	
	* Poprawiona instalacja modułu na niektórych 64-bitowych systemach
	  (autorem poprawki jest Mariusz Fik <fisiu@opensuse.org>)

2010-10-29  Patryk Cisek  <patryk@debian.org>
	
	* Usunięty błąd kompilacji dla -CMAKE_BUILD_TYPE=Release

2010-10-28  Patryk Cisek  <patryk@debian.org>
	
	* Moduł przystosowany do 0.6.6

2009-02-22  Patryk Cisek  <patryk@prezu.one.pl>

	* Dodane brakujące tłumaczenia

2009-02-17  Patryk Cisek  <patryk@prezu.one.pl>

	* Dodana brakująca ikona w config dialogu

2008-09-11  Patryk Cisek  <patryk@prezu.one.pl>

	* Moduł przystosowany do Kadu 0.6.5-svn i Qt4

2008-04-08  Patryk Cisek  <patryk@prezu.one.pl>

	* Poprawiony ortograf

2008-02-01  Patryk Cisek  <patryk@prezu.one.pl>

	* Dodany plik COPYRIGHT

2008-01-20  Patryk Cisek  <patryk@prezu.one.pl>

	* Dodane ikony do przyciskĂw "Undo" i "Redo" edytora
	  autorstwa Agnieszki Cichej <aga@prezu.one.pl>

2007-12-30  Patryk Cisek  <patryk@prezu.one.pl>

	* Dodane przyciski 'Undo" i "Redo" do edytora formul
	* Usuniety segfault wystepujacy, gdy Kadu zostaje zakonczone,
	  istnieje przynajmniej jedno otware okno edytora formul. Ponadto