@@ -1,4 +1,4 @@
-set (SOURCES
+set(SOURCES
 	mimetex.c
 	gifsave.c
 )
@@ -6,10 +6,11 @@ add_definitions(-DAA)
 
 # Original mimetex has a lot of compilation warnings. We have to remove
 # -Werror to let it build even though there are warnings.
-STRING(REGEX REPLACE "-Werror(=.*\ )?" " " CMAKE_C_FLAGS ${CMAKE_C_FLAGS})
+string(REGEX REPLACE "-Werror(=.*\ )?" " " CMAKE_C_FLAGS ${CMAKE_C_FLAGS})
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror=format-security")
 
 add_executable(mimetex ${SOURCES})
-if (NOT MSVC)
+if(NOT MSVC)
 	target_link_libraries(mimetex m)
-endif (NOT MSVC)
-install (TARGETS mimetex DESTINATION ${KADU_PLUGINS_LIBDIR}/bin/mime_tex)
+endif(NOT MSVC)
+install(TARGETS mimetex DESTINATION ${KADU_PLUGINS_LIBDIR}/bin/mime_tex)
