@@ -1,3 +1,7 @@
+2012-08-05  Patryk Cisek <patryk@debian.org>
+
+	* Hardened compilation flags of mimetex
+
 2012-06-19  Bartosz Brachaczek <b.brachaczek@gmail.com>
 
 	* Made plugin compatible with Kadu 0.12.0.
